# eremite

./: Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json
crates/eremite-core/: Cargo.toml
crates/eremite-core/src/: config.rs  conversation.rs  engine.rs  inference.rs  lib.rs
crates/eremite-core/tests/: engine.rs
crates/eremite-inference/: Cargo.toml
crates/eremite-inference/src/: engine.rs  event.rs  lib.rs  params.rs
crates/eremite-inference/tests/: inference.rs
crates/eremite-models/: Cargo.toml
crates/eremite-models/src/: download.rs  lib.rs  main.rs  manifest.rs  search.rs
crates/eremite-models/tests/: manager.rs  search.rs
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md
src/: App.css  App.tsx  Chat.tsx  MarkdownContent.tsx  ModelLibrary.tsx  Settings.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs
src/hooks/: useInferenceStream.ts  useTauriEvent.ts
src/model-library/: AdvancedSection.tsx  DownloadedModels.tsx  HubCard.tsx  HubList.tsx  PopularSection.tsx  SearchSection.tsx  useDownloadProgress.ts  usePopularModels.ts
src/styles/: chat.css  global.css  model-library.css
src/types/: model.ts
src/utils/: format.ts
