[package]
name = "eremite"
version = "0.1.0"
edition = "2021"

[dependencies]
eremite-core = { path = "../crates/eremite-core" }
eremite-inference = { path = "../crates/eremite-inference" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
